--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="calculator">
-        <h1 class="text-center">Calculator</h1>
+        <h1 class="text-center">! Calculator !</h1>
         <input type="text" id="inputBox" placeholder="0" />
         <div>
           <button class="button-operator">AC</button>
